// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 - add some eggs 1`] = `
Object {
  "completed": false,
  "id": Any<String>,
  "title": "Buy some eggs",
}
`;

exports[`3 - some eggs in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
]
`;

exports[`4 - add some breed 1`] = `
Object {
  "completed": false,
  "id": Any<String>,
  "title": "Buy some breed",
}
`;

exports[`5 - some eggs and breed in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some breed",
  },
]
`;

exports[`6 - add some milk 1`] = `
Object {
  "completed": false,
  "id": Any<String>,
  "title": "Buy some milk",
}
`;

exports[`7 - some eggs, breed and milk in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some breed",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some milk",
  },
]
`;

exports[`8 - done buying breed 1`] = `
Object {
  "completed": true,
  "id": Any<String>,
  "title": "Buy some breed",
}
`;

exports[`9 - some eggs, breed (x) and milk in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
  Object {
    "completed": true,
    "id": Any<String>,
    "title": "Buy some breed",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some milk",
  },
]
`;

exports[`10 - add some chocolate 1`] = `
Object {
  "completed": false,
  "id": Any<String>,
  "title": "Buy some chocolate",
}
`;

exports[`11 - some eggs, breed (x), milk, chocolate in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
  Object {
    "completed": true,
    "id": Any<String>,
    "title": "Buy some breed",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some milk",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some chocolate",
  },
]
`;

exports[`12 - remove chocolate from the list 1`] = `
Object {
  "completed": false,
  "id": Any<String>,
  "title": "Buy some chocolate",
}
`;

exports[`13 - some eggs, breed (x) and milk in the list 1`] = `
Array [
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some eggs",
  },
  Object {
    "completed": true,
    "id": Any<String>,
    "title": "Buy some breed",
  },
  Object {
    "completed": false,
    "id": Any<String>,
    "title": "Buy some milk",
  },
]
`;
